--- a/media/css/skfbgtu_cabinet.css
+++ b/media/css/skfbgtu_cabinet.css
@@ -134,3 +134,9 @@
 	padding: 0.25em .5em;
 	text-decoration: underline;
 }
+
+/* Успеваемость
+-----------------------------------------------------------------------------*/
+.marks ul {
+	padding-left: 3em;
+}
