--- a/media/css/skfbgtu.css
+++ b/media/css/skfbgtu.css
@@ -490,8 +490,13 @@ dl {
 
 /* Основные сведения
 -----------------------------------------------------------------------------*/
-.basic-info li {
+/*.common li {
   margin: 0 0 5px 2em;
+}*/
+.common .osnov th {
+  width: 20%;
+  font-size: .9em;
+  text-align: left;
 }
 
 /* Структура и органы управления
