Техническое задание от 04.09.2020 14:54

--- a/media/css/skfbgtu.css
+++ b/media/css/skfbgtu.css
@@ -697,6 +697,20 @@ dl {
   margin: 0 0 5px 2em;
 }
 
+/* COVID-19
+-----------------------------------------------------------------------------*/
+.covid19 a {
+  color: #333;
+  text-decoration: underline;
+  margin-bottom: 1em;
+}
+.covid19 a:hover {
+  color: #000080;
+}
+.covid19 li {
+  margin: 0 0 5px 2em;
+}
+
 
 /* Обратная связь
 -----------------------------------------------------------------------------*/
