Техзадание от 09.03.2021. Ещё внесены изменения в таблицу menu

--- a/media/css/skfbgtu.css
+++ b/media/css/skfbgtu.css
@@ -1012,6 +1012,16 @@ dl {
   margin: 0 0 5px;
 }
 
+/* Подать заявление
+-----------------------------------------------------------------------------*/
+.apply p {
+  text-indent: 1em;
+}
+.apply li {
+  margin-left: 2em;
+  margin-bottom: 5px;
+}
+
 /* Расписание вступительных испытаний
 -----------------------------------------------------------------------------*/
 .schedule-matriculant p {
