Техническое задание от 12.02.2022г.

--- a/media/css/skfbgtu.css
+++ b/media/css/skfbgtu.css
@@ -1087,6 +1087,16 @@ dl {
 	padding-top: 10px;
 }
 
+/* Социально-психологическая поддержка
+-----------------------------------------------------------------------------*/
+.psychological-support div.row {
+	margin-bottom: 5px;
+}
+
+.psychological-support p {
+	text-indent: 1em;
+}
+
 /* Студенческий совет
 -----------------------------------------------------------------------------*/
 .student-council p {
