Техническое задание от 11.02.2022г.

--- a/media/css/skfbgtu.css
+++ b/media/css/skfbgtu.css
@@ -1178,6 +1178,11 @@ dl {
 	color: #286090;
 }
 
+/* Программы вступительных испытаний */
+.examination-programs li {
+	margin-left: 2em;
+}
+
 /* Специальности и вступительные испытания
 -----------------------------------------------------------------------------*/
 .specialties p {
