Техническое задание от 20.11.2023г. 10:39

--- a/media/css/skfbgtu.css
+++ b/media/css/skfbgtu.css
@@ -1395,6 +1395,32 @@ dl {
 	margin: 0 0 5px 2em;
 }
 
+/* ЭИОС
+-----------------------------------------------------------------------------*/
+.eios p {
+	text-indent: 1em;
+}
+
+.eios a {
+	text-decoration: underline;
+}
+
+.eios li {
+	margin: 0 0 5px 2em;
+}
+
+/* Внутренняя система оценки качества образования
+-----------------------------------------------------------------------------*/
+.quality p {
+	text-indent: 1em;
+}
+
+.quality a {
+	color: #333;
+	text-decoration: underline;
+}
+
+
 /* Правила внутреннего распорядка
 -----------------------------------------------------------------------------*/
 .routine p {
