--- a/media/css/skfbgtu.css
+++ b/media/css/skfbgtu.css
@@ -1465,6 +1465,13 @@ dl {
 
 /* Подвал
 -----------------------------------------------------------------------------*/
+.agreement {
+	margin-top: 5px;
+	border-top: 1px solid #777;
+	border-bottom: 1px solid #777;
+	padding: 5px 0;
+}
+
 .footer {
 	background-color: #777;
 	background: linear-gradient(to left, rgba(150, 150, 150, 0.8),
@@ -1473,7 +1480,7 @@ dl {
 	rgba(150, 150, 150, 0.8));
 	color: #EEE;
 	padding: 10px 0;
-	margin-top: 10px;
+	/*margin-top: 10px;*/
 }
 
 .footer .site-name {
