Техническое задание от 21.03.2024г. 10:59

--- a/media/css/skfbgtu.css
+++ b/media/css/skfbgtu.css
@@ -1463,6 +1463,17 @@ dl {
 	color: #286090;
 }
 
+/* Анкета - качество образования
+-----------------------------------------------------------------------------*/
+.questionnaire p {
+	text-indent: 1em;
+}
+
+.questionnaire div {
+	margin-top: 1em;
+	margin-bottom: 2em;
+}
+
 /* Подвал
 -----------------------------------------------------------------------------*/
 .agreement {
