Технические задания от 28.03.2024г. 11:34

--- a/media/css/skfbgtu.css
+++ b/media/css/skfbgtu.css
@@ -1419,6 +1419,9 @@ dl {
 	color: #333;
 	text-decoration: underline;
 }
+.quality li {
+	margin: 0 0 5px 2em;
+}
 
 
 /* Правила внутреннего распорядка
