Техническое задание от 14.01.2025г.

--- a/media/css/skfbgtu.css
+++ b/media/css/skfbgtu.css
@@ -1473,6 +1473,16 @@ dl {
 	color: #286090;
 }
 
+/* Лицензирование
+-----------------------------------------------------------------------------*/
+.licensing li {
+	margin: 0 0 5px 2em;
+}
+.licensing li a {
+	color: #333 !important;
+	text-decoration: underline;
+}
+
 /* Анкета - качество образования
 -----------------------------------------------------------------------------*/
 .questionnaire p {
